--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_core: ^3.0.0
   cloud_firestore: ^5.0.0
   provider: ^6.1.2
+  animated_list_item: ^1.0.0
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
