first release draft

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+3
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -40,6 +40,8 @@ dependencies:
   provider: ^6.1.2
   animated_list_item: ^1.0.0
   flutter_staggered_animations: ^1.1.1
+  flutter_launcher_icons: ^0.13.1
+  share_plus: ^10.0.0
 
 dev_dependencies:
   flutter_test:
@@ -54,7 +56,13 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_launcher_icons:
+  image_path_android: "lib/assets/icons/android-icon.png"
+  image_path_ios: "lib/assets/icons/android-icon.png"
+  ios: true
+  android: true
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -79,10 +87,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: NotoSans
+      fonts:
+        - asset: lib/assets/fonts/NotoSansEthiopic.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
