--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ app.*.map.json
 /android/app/release
 mezgebemezmur-*.json
 firebase_options.dart
+google-services.json
+my-release-key.jks
+
+
+venv
