--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   flutter_launcher_icons: ^0.13.1
   share_plus: ^10.0.0
+  google_nav_bar: ^5.0.6
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +57,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
